# This file documents the revision history for Perl extension Catalyst.

5.8000
        - Port to Moose
        - Added test for action stringify

5.7013
        - Fix subdirs for scripts that run in subdirs more than one level deep.
        - Added test and updated docs for handling the Authorization header
          under mod_fastcgi/mod_cgi.
        - Fixed bug in HTTP engine where the connection was not closed properly if the
          client disconnected before sending any headers. (Ton Voon)

5.7012  2007-12-16 23:44:00
        - Fix uri_for()'s and uri_with()'s handling of multibyte chars
          (Daisuke Murase)
        - Fix __PACKAGE__->config->{foo} = 'bar' case with subclassing
        - Add Catalyst::Stats (Jon Schutz)
        - Fixed a bug where ?q=bar=baz is decoded as q=>'bar', not 'bar=baz'.
          (Tatsuhiko Miyagawa, Masahiro Nagano)
        - Fixed a bug where -rr (restart regex) command line option could cause
          shell errors. (Aristotle Pagaltzis, Chisel Wright)

5.7011  2007-10-18 20:40:00
        - Allow multiple restart directories and added option to follow
          symlinks in the HTTP::Restarter engine (Sebastian Willert)
        - Fixed t/optional_http-server-restart.t so it actually tests
          if the server restarted or notified of an error (Sebastian Willert)
        - Return child PID from the HTTP engine when run with the 'background' option.
          (Emanuele Zeppieri)
        - Fixed bug in HTTP engine where writes could fail with
          'Resource temporarily unavailable'.
        - Fixed bug where %2b in query parameter is doubly decoded to ' ', instead of '+'
          (Gavin Henry, Tatsuhiko Miyagawa, Oleg Pronin)
        - Fixed bug where req->base and req->uri would include a port number when running
          in SSL mode.
        - Removed unnecessary sprintf in debug mode that caused warnings on locales where
          commas are used for decimal markers.